frontend/src/scss/components/footer/_main.scss
#main-footer {
	display: flex;
	flex-direction: column;
	margin-top: 2px;
	padding: 0.5em;
	font-family: $secondary_font;
	background: $primary_element_background;
	color: $secondary_font_colour;
	box-shadow: $primary_element_box_shadow;

	.content {
		justify-content: space-between;
		// border-top: 1px solid rgba(32, 37, 42, 0.4);
		// padding: 1em 0;

		.crv {
			margin-left: 1em;
			flex-wrap: wrap;

			.cr {
				margin-left: 1em;
			}

			.social {
				i:hover {
					color: #b4bbc2;
				}

				i {
					font-size: 1em;
				}
			}

			span {
				margin: 0 0.2em;
			}
		}

		.fmenu {
			@extend nav.mini-wide;

			margin-right: 1em;
			flex-wrap: wrap;

			a {
				color: $secondary_font_colour;
			}
		}
	}
}

